# PhoegRustGraph

./: .gitignore  Cargo.toml  README.md  aliases.js  build.rs  crates.js  index.html  nauty-wrapper.c  search-index.js  settings.html  source-files.js  update-doc.sh
base64/: all.html  constant.CRYPT.html  constant.STANDARD.html  constant.STANDARD_NO_PAD.html  constant.URL_SAFE.html  constant.URL_SAFE_NO_PAD.html  enum.CharacterSet.html  enum.DecodeError.html  fn.decode.html  fn.decode_config.html  fn.decode_config_buf.html  fn.decode_config_slice.html  fn.encode_config.html  fn.encode_config_buf.html  fn.encode_config_slice.html  index.html  struct.Config.html
benches/: biggraphs.g6  convg6.rs
bit_vec/: all.html  index.html  struct.BitVec.html  struct.Blocks.html  struct.IntoIter.html  struct.Iter.html  trait.BitBlock.html
byteorder/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
doc_comment/: all.html  index.html  macro.doc_comment.html  macro.doctest.html
examples/: README.md  comparison-transfos.rs  gain-from-orbits.rs  naive-test.rs  orbits.rs  subgraphs.rs  symmetries-2opt.rs  transfopute.rs
graph/: all.html  index.html  sidebar-items.js  struct.EdgeIterator.html  struct.GraphNauty.html  struct.Set.html  struct.SetIter.html  trait.Graph.html  trait.GraphFormat.html  trait.GraphIso.html  trait.GraphIter.html
libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  (+3718 more)
src/: errors.rs  (+12 more)
(+152 files in other folders)
