[package]
name = "graph"
version = "3.1.0-alpha"
authors = ["Gauvain Devillez <gauvain.devillez@umons.ac.be>"]
build = "build.rs"
edition="2018"

[lib]
name="graph"
crate-type=["cdylib","rlib"]

[build-dependencies]
cc = "1.0"

[dependencies]
bit-vec = "0.6"
libc = "0.2"
lazy_static = "1.4"
base64 = "0.10"
doc-comment = "0.3"

[dev-dependencies]
nom = "6.1"
criterion = "0.3"
indicatif="0.16"

[[bench]]
name = "convg6"
harness = false
